<resources>
    <string name="app_name">IMC Calc</string>
    <string name="male">Homen</string>
    <string name="female">Mulher</string>
    <string name="height">Altura</string>
    <string name="heightUser">0.0 cm</string>
    <string name="weight">Peso</string>
    <string name="weightUser">0</string>
    <string name="kg">Kg</string>
    <string name="age">Idade</string>
    <string name="ageUser">0</string>
    <string name="year">Anos</string>
    <string name="btnCalc">Calcular</string>
    <string name="plus">+</string>
    <string name="less">-</string>
    <string name="plusWeightDescripition">Aumentar peso</string>
    <string name="lessWeightDescripition">Diminuir peso</string>
    <string name="plusAgeDescripition">Aumentar idade</string>
    <string name="lessAgeDescripition">Diminuir idade</string>
    <string name="bmi">IMC</string>
    <string name="btnReturn">Voltar</string>
    <string name="result">Resultado</string>
    <string name="optimalRange">Faixa de peso ideal</string>
    <string name="bmiClassification">Classificação</string>
    <string name="optimalRangeInitial">00.0 Kg</string>
    <string name="weightToGain">Peso a ganhar</string>
    <string name="weightToLose">Peso a perder</string>
    <string name="underWeight">Abaixo do peso</string>
    <string name="normalWeight">Peso normal</string>
    <string name="overWeight">Sobrepeso</string>
    <string name="obesityOne">Obesidade I</string>
    <string name="obesityTwo">Obesidade II</string>
    <string name="obesityThree">Obesidade III</string>
</resources>