<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:importantForAccessibility="no"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/txtAppName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:text="@string/app_name"
                android:textSize="30sp" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:columnCount="2"
            android:rowCount="1">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#807F00FF"
                android:gravity="center"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_columnWeight="1"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/material_dynamic_neutral30"
                android:gravity="center"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="8dp" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:background="@drawable/card_background"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewAlturaLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewAlturaValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/heightUser"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:max="273"/>
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:columnCount="2"
            android:rowCount="1"
            android:rowOrderPreserved="false"
            android:alignmentMode="alignMargins">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="8dp"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/less"
                        android:contentDescription="@string/lessWeightDescripition"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        app:backgroundTint="#807F00FF"
                        app:cornerRadius="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/weightUser"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/plus"
                        android:contentDescription="@string/plusWeightDescripition"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        app:backgroundTint="#807F00FF"
                        app:cornerRadius="12dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/kg"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="8dp"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/less"
                        android:contentDescription="@string/lessAgeDescripition"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        app:backgroundTint="#807F00FF"
                        app:cornerRadius="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/ageUser"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/plus"
                        android:contentDescription="@string/plusAgeDescripition"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        app:backgroundTint="#807F00FF"
                        app:cornerRadius="12dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/year"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#807F00FF"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btnCalc"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="8dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>