<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:paddingStart="24dp"

        android:paddingEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:importantForAccessibility="no"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:text="@string/app_name"
                android:textColor="?attr/android:textColor"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textAlignment="textStart"
                android:textColor="?attr/android:textColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bmi"
                android:textAlignment="textStart"
                android:textColor="?attr/android:textColor"
                android:textColorHint="?attr/android:textColor"
                android:textSize="20sp"/>

            <View
                android:id="@+id/bmiIndicator"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="16dp"
                android:background="@color/primary" />

            <TextView
                android:id="@+id/textViewbmiClassification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bmiClassification"
                android:textAlignment="textStart"
                android:textColor="?attr/android:textColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optimalRange"
                android:textAlignment="textStart"
                android:textColor="?attr/android:textColor"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewWeightMin"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/optimalRangeInitial"
                    android:textAlignment="textStart"
                    android:textColor="?attr/android:textColor"
                    android:textColorHint="?attr/android:textColor"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textViewWeightMid"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="@string/optimalRangeInitial"
                    android:textAlignment="center"
                    android:textColor="?attr/android:textColor"
                    android:textColorHint="?attr/android:textColor"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textViewWeightMax"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="@string/optimalRangeInitial"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/android:textColor"
                    android:textColorHint="?attr/android:textColor"
                    android:textSize="20sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weightToGain"
                android:textAlignment="textStart"
                android:textColor="?attr/android:textColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewWeightToWin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:text="@string/optimalRangeInitial"
                android:textAlignment="textStart"
                android:textColor="?attr/android:textColor"
                android:textColorHint="?attr/android:textColor"
                android:textSize="20sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/primary"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/btnReturn"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>